source code corrected

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,10 @@
-child-count-tag-dispatcher {
+count-tag-dispatcher {
 type = Dispatcher
     executor = "thread-pool-executor"
     thread-pool-executor {
-     fixed-pool-size = 3
+     fixed-pool-size = 4
     }
-    throughput = 2
-    mailbox-capacity = 10
+    throughput = 1
+    mailbox-capacity = 5
     mailbox-type = "akka.dispatch.NonBlockingBoundedMailbox"
 }
